vagrant/yamlconfig/03/01_demoapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gundam
spec: {}
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: barbatos
  name: barbatos
  namespace: gundam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barbatos
  template:
    metadata:
      labels:
        app: barbatos
    spec:
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-barbatos
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: gundam
  name: barbatossvc
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  type: ClusterIP
  ports:
  - port: 8090
    targetPort: 80
    protocol: TCP
  selector:
    app: barbatos    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gundamapp
  name: gundamapp
  namespace: gundam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gundamapp
  template:
    metadata:
      labels:
        app: gundamapp
    spec:
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-gundam
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  namespace: gundam
  name: gundamappsvc
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: gundamapp    
---
