vagrant/yamlconfig/03/03_httproute_aks.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gundam-gw
  namespace: gundam
spec:
  gatewayClassName: envoy
  listeners:
  - protocol: HTTP
    port: 80
    name: gundam-gw
    allowedRoutes:
      namespaces:
        from: Same         
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundam-httproute
  namespace: gundam
spec:
  parentRefs:
  - name: gundam-gw
  hostnames:
  - "gundam.app.teknews.cloud"
  #- "k8scalico1"
  rules:
  - backendRefs:
    - name: gundamappsvc
      port: 8080
      kind: Service
