vagrant/yamlconfig/03/04_splittraffic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: eva02
  namespace: gundam
  name: eva02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eva02
  template:
    metadata:
      labels:
        app: eva02
    spec:
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-eva02
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"        
---
apiVersion: v1
kind: Service
metadata:
  name: evasvc
  namespace: gundam
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  type: ClusterIP
  ports:
  - port: 8091
    targetPort: 80
    protocol: TCP
  selector:
    app: eva02    
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: exia
  name: exia
  namespace: gundam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exia
  template:
    metadata:
      labels:
        app: exia
    spec:
      volumes:
      - name: nginx-index-file
        configMap:
          name: index-html-exia
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nginx-index-file
          mountPath: /usr/share/nginx/html
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: exiasvc
  namespace: gundam
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  type: ClusterIP
  ports:
  - port: 8092
    targetPort: 80
    protocol: TCP
  selector:
    app: exia       
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gundamsplit-gw
  namespace: gundam
spec:
  gatewayClassName: envoy-nodeport
  listeners:
  - protocol: HTTP
    port: 80
    name: gundamsplit-gw
    allowedRoutes:
      namespaces:
        from: Same  
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundamsplit
  namespace: gundam
spec:
  parentRefs:
  - name: gundamsplit-gw
  hostnames:
  - "k8scalico1"
  rules:
  - backendRefs:
    - kind: Service
      name: evasvc
      port: 8091
      weight: 10
    - kind: Service
      name: exiasvc
      port: 8092
      weight: 90
