vagrant/yamlconfig/03/05_tls_aks.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gundam-gw-tls
  namespace: gundam
spec:
  gatewayClassName: envoy
  listeners:
  - protocol: HTTPS
    port: 443
    name: gundam-gw-tls
    allowedRoutes:
      namespaces:
        from: Same     
    tls:
      certificateRefs:
      - kind: Secret
        group: ""
        name: gundamapp-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gundam-httproute
  namespace: gundam
spec:
  parentRefs:
  - name: gundam-gw-tls
  hostnames:
  #- "gundam.app.teknews.cloud"
    - "k8ssingle1"
  #- "k8ssingle2"
  #- "k8ssingle3"
  rules:
  - backendRefs:
    - name: gundamappsvc
      port: 8080
      kind: Service
  - backendRefs:
    - name: barbatossvc
      port: 8090
      kind: Service
    matches:
    - path:
        type: PathPrefix
        value: /barbatos
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
